--- a/matplotlib_animation.ipynb
+++ b/matplotlib_animation.ipynb
@@ -5,7 +5,8 @@
       "metadata": {},
       "source": [
         "\n",
-        "# Animated line plot\n"
+        "## Animated line plot\n",
+        "#### Not working yet, need to download and implement ffmepg \n"
       ]
     },
     {
